cloud-infra-macros/tests/fails/string_with_only_alpha_numerics_and_underscores_empty.stderr
error: proc macro panicked
 --> tests/fails/string_with_only_alpha_numerics_and_underscores_empty.rs:4:15
  |
4 |     let key = string_with_only_alpha_numerics_and_underscores!("");
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should not be blank
